# token-tracker

./: .gitignore  CLAUDE.md  README.md  README_EN.md  ROADMAP.md  install-statusline.sh  install.sh  pyproject.toml  tt-statusline.py
.github/workflows/: ci.yml
docs/: competitors.md  terminal-integrations.md
src/: cli.py  hooks.py  i18n.py
src/adapters/: claude.py  codex.py  rate_limits.py  registry.py  types.py
src/analyzer/: aggregator.py  blocks.py  cost.py
src/token_tracker/: cli.py  config.py  hooks.py  i18n.py  tz.py  wizard.py
src/token_tracker/adapters/: claude.py  codex.py  rate_limits.py  types.py  util.py
src/token_tracker/analyzer/: aggregator.py  cost.py
src/token_tracker/templates/: claude_statusline.py  codex_statusline.py
src/token_tracker/ui/: console.py  format.py  heatmap.py  panels.py  status.py  tables.py  theme.py  themes.py  widgets.py
src/ui/: format.py  panels.py  progress.py  tables.py  theme.py
tests/: test_aggregator.py  test_blocks.py  test_cli.py  test_codex.py  test_cost.py  test_heatmap.py  test_hooks.py  test_status.py  test_tables.py  test_theme.py  test_util.py
