[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "token-tracker"
version = "0.3.6"
description = "Track token usage across local AI agents (Claude Code, Codex)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "stormzhang", email = "stormzhang.dev@gmail.com" },
]
keywords = ["claude-code", "codex", "token", "usage", "cost", "ai-agent", "statusline", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/stormzhang/token-tracker"
Repository = "https://github.com/stormzhang/token-tracker"
Issues = "https://github.com/stormzhang/token-tracker/issues"

[project.scripts]
tt = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
