[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "token-tracker"
version = "0.3.6"
description = "Track token usage across local AI agents (Claude Code, Codex)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "stormzhang", email = "stormzhang.dev@gmail.com" },
]
keywords = ["claude-code", "codex", "token", "usage", "cost", "ai-agent", "statusline", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/stormzhang/token-tracker"
Repository = "https://github.com/stormzhang/token-tracker"
Issues = "https://github.com/stormzhang/token-tracker/issues"

[project.scripts]
tt = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E501(行长)故意不开：状态栏 ANSI 色码串本就长，启用只产生噪音
select = ["E4", "E7", "E9", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# 宽松起步，后续逐步收紧
check_untyped_defs = true
