[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "token-tracker"
version = "0.4.7"
description = "Track token usage across local AI agents (Claude Code, Codex)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "stormzhang", email = "stormzhang.dev@gmail.com" },
]
keywords = ["claude-code", "codex", "token", "usage", "cost", "ai-agent", "statusline", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7",
    # wizard 补丁挂在 questionary 私有内部（InquirerControl._get_choice_tokens 等），锁大版本防破坏
    "questionary>=2.0,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/stormzhang/token-tracker"
Repository = "https://github.com/stormzhang/token-tracker"
Issues = "https://github.com/stormzhang/token-tracker/issues"

[project.scripts]
tt = "token_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E501(行长)故意不开：状态栏 ANSI 色码串本就长，启用只产生噪音
select = ["E4", "E7", "E9", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# 状态栏脚本模板：__STATUSLINE_*__ 占位符是烘焙时注入的（F821 未定义名是模板本性）；
# E701/E401/I001/UP015/UP017 是脚本既有风格（紧凑 import、timezone.utc 兼容手改老 python）——
# 豁免以保持渲染产物与历史版本逐字节一致（模板内容 = 落盘脚本内容）
"src/token_tracker/templates/*" = ["F821", "E701", "E401", "I001", "UP015", "UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# 宽松起步，后续逐步收紧
check_untyped_defs = true

[[tool.mypy.overrides]]
# 状态栏脚本模板含烘焙占位符（__STATUSLINE_*__），不是可独立类型检查的模块
module = "token_tracker.templates.*"
ignore_errors = true
